--- a/www/index.html
+++ b/www/index.html
@@ -16,14 +16,18 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/select.dialog.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/map.controller.js"></script>
     <script src="js/logs.controller.js"></script>
     <script src="js/positioninfo.controller.js"></script>
+    <script src="js/mapinfo.controller.js"></script>
     <script src="js/setup.controller.js"></script>
     <script src="js/accelerometer.controller.js"></script>
+    <script src="js/data.js"></script>
 
   </head>
 
